k8s/identityServer-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: identityserver-depl
spec: 
  replicas: 1
  selector: 
    matchLabels: 
      app: identityserver
  template:
    metadata:
      labels:
        app: identityserver
    spec: 
      containers:
        - name: identityserver
          image : nandanchitale/secure-microservices:identityServer_latest
          ports:
            - containerPort: 5041
---
apiVersion: v1
kind: Service
metadata: 
  name: identityserver-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: identityserver
  ports:
    - name: identityserver
      protocol: TCP
      port: 5041 
      targetPort: 5041
---
apiVersion: v1
kind: Service
metadata:
  name: identityserver-srv
spec:
  type: NodePort
  selector:
    app: identityserver
  ports:
    - name: identityserver
      protocol: TCP
      port: 5041
      targetPort: 5041
